tests/negative/non_exhaustive_array.glyph
module neg

fn first(xs: Array<string>) -> number {
  return match xs {
    [head, ...rest] => 1,
  }
}
